<resources>
    <string name="app_name">Where To Go</string>
    <string name="main_screen">Main screen</string>
    <string name="events">Events</string>
    <string name="locations">Locations</string>
    <string name="routes">Routes</string>
    <string name="search">Search</string>
    <string name="notice_text">To get advanced functionality, register in the WTG application</string>
    <string name="event_image">Event image</string>
    <string name="top_locations">Top locations</string>
    <string name="location_work_days">ПН-ПТ: c %1$s до %2$s</string>
    <string name="location_work_weekend">СБ-ВС: c %1$s до %2$s</string>
    <string name="location_work_break">перерыв: c %1$s до %2$s</string>
    <string name="top_events">Top events</string>
    <string name="sign_up">Sign up</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="repeat_password">repeat password</string>
    <string name="birth_date">birth date</string>
    <string name="accept">Accept</string>
    <string name="security_policy">Security policy</string>
    <string name="restore_password">Restore password</string>
    <string name="notify">All fields must be filled</string>
    <string name="notify_email">Invalid email</string>
    <string name="notify_pass">Invalid password</string>
    <string name="notify_pass_not_equals">Passwords are not equals</string>
    <string name="main_label">Main</string>
    <string name="top_locations_label">Top locations</string>
    <string name="top_events_label">Top events</string>
    <string name="event_details">Event details</string>
    <string name="location_details">Location details</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="rest">Rest</string>
    <string name="choose_your_rest">Choose your rest</string>
    <string name="source">Source</string>
    <string name="load_error">Oops, can\'t load data</string>
    <string name="try_again">Try Again</string>
    <string name="not_indicated">not indicated</string>
    <string name="dashboard_heading">Find amazing events happening around you</string>
    <string name="dashboard_sub_title">%1$s events around you</string>
    <string name="search_bar_hint">search for an event...</string>
    <string name="show_full_description">show full description...</string>
    <string name="are_interested">are interested</string>
    <string name="security_policy_accept">accept</string>
    <string name="security_policy_decline">decline</string>
    <string name="security_policy_notice">you cannot register without accepting the security terms</string>
    <string name="security_policy_terms">Security policy terms</string>
</resources>