<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_page"
        android:icon="@drawable/ic_home_24"
        android:title="@string/main_screen" />

    <item
        android:id="@+id/events_page"
        android:title="@string/events"
        android:icon="@drawable/ic_calendar_24"/>

    <item
        android:id="@+id/locations_page"
        android:title="@string/locations"
        android:icon="@drawable/ic_location_24"/>

    <item
        android:id="@+id/routes_page"
        android:title="@string/routes"
        android:icon="@drawable/ic_map_24"/>

    <item
        android:id="@+id/search_page"
        android:title="@string/search"
        android:icon="@drawable/ic_search_24"/>

</menu>