<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="ru.sectorsj.where_to_go.ui.main.MainFragment"
        android:label="@string/main_label"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/actions_mainFragment_to_topLocations"
            app:destination="@id/topLocations"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />

        <action
            android:id="@+id/action_mainFragment_to_topEvents"
            app:destination="@id/topEvents"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />

        <action
            android:id="@+id/action_mainFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_mainFragment_to_fragmentRest"
            app:destination="@id/fragmentRest"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />

    </fragment>

    <fragment
        android:id="@+id/topLocations"
        android:name="ru.sectorsj.where_to_go.ui.locations.TopLocationsFragment"
        android:label="@string/top_locations_label"
        tools:layout="@layout/fragment_top_locations">
        <action
            android:id="@+id/action_topLocations_to_locationDetailsFragment"
            app:destination="@id/locationDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />

    </fragment>

    <fragment
        android:id="@+id/locationDetailsFragment"
        android:name="ru.sectorsj.where_to_go.ui.locations.LocationDetailsFragment"
        android:label="@string/location_details"
        tools:layout="@layout/fragment_location_details" />

    <fragment
        android:id="@+id/topEvents"
        android:name="ru.sectorsj.where_to_go.ui.events.TopEventsFragment"
        android:label="@string/top_events_label"
        tools:layout="@layout/fragment_top_events">
        <action
            android:id="@+id/action_topEvents_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="ru.sectorsj.where_to_go.ui.events.EventDetailsFragment"
        android:label="@string/event_details"
        tools:layout="@layout/fragment_event_details" />

    <fragment
        android:id="@+id/signUpFragment"
        android:name="ru.sectorsj.where_to_go.ui.signup.SignUpFragment"
        android:label="Sign up"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="ru.sectorsj.where_to_go.ui.signin.SignInFragment"
        android:label="Sign in"
        tools:layout="@layout/fragment_sign_in" />

    <fragment
        android:id="@+id/fragmentRest"
        android:name="ru.sectorsj.where_to_go.ui.rest.RestFragment"
        android:label="@string/rest"
        tools:layout="@layout/fragment_rest" />
</navigation>