<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_color"
    tools:context=".ui.signup.SignUpFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/card_background_color"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardMaxElevation="@dimen/card_max_elevation"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sign_up_title"
                android:layout_width="@dimen/auth_title_width_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_vertical_margin"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/auth_title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <EditText
                android:id="@+id/user_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_vertical_margin_mid"
                android:background="@drawable/custom_edit_text"
                android:ems="15"
                android:textSize="@dimen/auth_text_size"
                android:hint="@string/login"
                android:inputType="text"
                android:textCursorDrawable="@drawable/custom_edittext_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_title"
                app:layout_constraintWidth_percent="0.7" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_vertical_margin_small"
                android:background="@drawable/custom_edit_text"
                android:textSize="@dimen/auth_text_size"
                android:hint="@string/name"
                android:inputType="text"
                android:textCursorDrawable="@drawable/custom_edittext_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_login"
                app:layout_constraintWidth_percent="0.7" />

            <EditText
                android:id="@+id/user_surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_vertical_margin_small"
                android:background="@drawable/custom_edit_text"
                android:textSize="@dimen/auth_text_size"
                android:hint="@string/surname"
                android:inputType="text"
                android:textCursorDrawable="@drawable/custom_edittext_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                app:layout_constraintWidth_percent="0.7" />

            <EditText
                android:id="@+id/user_birthdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_vertical_margin_small"
                android:background="@drawable/custom_edit_text"
                android:textSize="@dimen/auth_text_size"
                android:hint="@string/birth_date"
                android:inputType="date"
                android:textCursorDrawable="@drawable/custom_edittext_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_surname"
                app:layout_constraintWidth_percent="0.7" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_vertical_margin_small"
                android:background="@drawable/custom_edit_text"
                android:textSize="@dimen/auth_text_size"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/custom_edittext_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_birthdate"
                app:layout_constraintWidth_percent="0.7" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_vertical_margin_small"
                android:hint="@string/password"
                android:background="@drawable/custom_edit_text"
                android:inputType="textPassword"
                android:textSize="@dimen/auth_text_size"
                android:textCursorDrawable="@drawable/custom_edittext_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_email"
                app:layout_constraintWidth_percent="0.7" />

            <EditText
                android:id="@+id/user_repeat_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_vertical_margin_small"
                android:background="@drawable/custom_edit_text"
                android:inputType="textPassword"
                android:textSize="@dimen/auth_text_size"
                android:hint="@string/repeat_password"
                android:textCursorDrawable="@drawable/custom_edittext_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_password"
                app:layout_constraintWidth_percent="0.7" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/security_policy_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/auth_vertical_margin"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/user_repeat_password"
                android:textSize="@dimen/auth_text_size"
                android:text="@string/security_policy"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reg_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/reg_button_color"
                android:text="@string/accept"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/security_policy_txt"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintWidth_percent="0.7" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>